--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge</title>
+    <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="item item-1">1</div>
-      <div class="item item-2">2</div>
-      <div class="item item-3">3</div>
-      <div class="item item-4">4</div>
-      <div class="item item-5">5</div>
-      <div class="item item-6">6</div>
+    <div class="main-container">
+      <div class="grid-container">
+        <div class="item item-1">
+          <div class="box"></div>
+        </div>
+        <div class="item item-2">
+          <div class="box"></div>
+        </div>
+        <div class="item item-3">
+          <div class="box"></div>
+        </div>
+        <div class="item item-4">
+          <div class="box"></div>
+        </div>
+        <div class="square"></div>
+      </div>
     </div>
   </body>
 </html>
