--- a/index.html
+++ b/index.html
@@ -3,27 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Challenge</title>
+    <title>CSS grid</title>
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="main-container">
-      <div class="grid-container">
-        <div class="item item-1">
-          <div class="box"></div>
-        </div>
-        <div class="item item-2">
-          <div class="box"></div>
-        </div>
-        <div class="item item-3">
-          <div class="box"></div>
-        </div>
-        <div class="item item-4">
-          <div class="box"></div>
-        </div>
-        <div class="square"></div>
-      </div>
+    <div class="grid-container">
+      <div class="item item-1">Header</div>
+      <div class="item item-2">Side Bar</div>
+      <div class="item item-3">Main content</div>
     </div>
   </body>
 </html>
