Fix responsive design of the project

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       <div class="main-container">
         <section class="banner">
           <div class="banner__text-container">
-            <h1 class="banner__title">Check The Best Food</h1>
+            <h1 class="banner__title">
+              Check The <br />
+              Best Food
+            </h1>
             <p class="banner__paragraph">
               There is a wide variety of delicious foods that you can try and
               delight your palate. You will like it so much that you won't want
