Add social media icons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS grid project</title>
+    <script
+      src="https://kit.fontawesome.com/763e17878c.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./styles.css" />
   </head>
@@ -22,6 +26,11 @@
               to go anywhere else.
             </p>
             <button class="banner__button">Book A Table</button>
+            <div class="banner__icon-container">
+              <i class="fa-brands fa-instagram fa-2x"></i>
+              <i class="fa-brands fa-facebook-f fa-2x"></i>
+              <i class="fa-brands fa-x-twitter fa-2x"></i>
+            </div>
           </div>
           <figure>
             <img
