--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#f98a47" />
     <title>CSS grid project</title>
     <script
       src="https://kit.fontawesome.com/763e17878c.js"
